--- a/Example/UICollectionViewGallery.xcodeproj/xcshareddata/xcschemes/UICollectionViewGallery-Example.xcscheme
+++ b/Example/UICollectionViewGallery.xcodeproj/xcshareddata/xcschemes/UICollectionViewGallery-Example.xcscheme
@@ -52,6 +52,16 @@
                ReferencedContainer = "container:UICollectionViewGallery.xcodeproj">
             </BuildableReference>
          </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "A19558D41DE587F500A6E220"
+               BuildableName = "UICollectionViewGallery_ExampleTests.xctest"
+               BlueprintName = "UICollectionViewGallery_ExampleTests"
+               ReferencedContainer = "container:UICollectionViewGallery.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
