--- a/Example/UICollectionViewGallery.xcodeproj/xcshareddata/xcschemes/UICollectionViewGallery-Example.xcscheme
+++ b/Example/UICollectionViewGallery.xcodeproj/xcshareddata/xcschemes/UICollectionViewGallery-Example.xcscheme
@@ -34,6 +34,48 @@
                ReferencedContainer = "container:UICollectionViewGallery.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "B8EBD8F21C99833EA1BB0DC067E5482E"
+               BuildableName = "Pods_UICollectionViewGallery_Example.framework"
+               BlueprintName = "Pods-UICollectionViewGallery_Example"
+               ReferencedContainer = "container:Pods/Pods.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "518187163336044DC1E7729477EE8790"
+               BuildableName = "Pods_UICollectionViewGallery_Tests.framework"
+               BlueprintName = "Pods-UICollectionViewGallery_Tests"
+               ReferencedContainer = "container:Pods/Pods.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "9CF7EF48179270A2895B6A66AD5837A8"
+               BuildableName = "UICollectionViewGallery.framework"
+               BlueprintName = "UICollectionViewGallery"
+               ReferencedContainer = "container:Pods/Pods.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
