--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,12 @@
 
 osx_image: xcode8.1
 language: objective-c
-# cache: cocoapods
-# podfile: Example/Podfile
-# before_install:
-# - gem install cocoapods # Since Travis is not always on latest version
-# - pod install --project-directory=Example
+cache: cocoapods podfile: Example/Podfile
+ before_install:
+- gem install cocoapods # Since Travis is not always on latest version
+- pod install --project-directory=Example
 script:
-- set -o pipefail && xcodebuild test -workspace Example/UICollectionViewGallery.xcworkspace -scheme UICollectionViewGallery-Example -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO | xcpretty
+- set -o pipefail && xcodebuild test -workspace Example/UICollectionViewGallery.xcworkspace -scheme UICollectionViewGallery-Example -sdk iphonesimulator10.1
+-destination 'platform=iOS Simulator,name=iPhone 7,OS=10.1’
+ ONLY_ACTIVE_ARCH=NO | xcpretty
 - pod lib lint
