--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ language: objective-c
 
 before_install:
 - gem install cocoapods # Since Travis is not always on latest version
-- pod install --project-directory=Example
+#- pod install --project-directory=Example
 script:
 - set -o pipefail && xcodebuild test -workspace Example/UICollectionViewGallery.xcworkspace -scheme UICollectionViewGallery-Example -sdk iphonesimulator10.1 -destination 'platform=iOS Simulator,name=iPhone 7,OS=10.1’ ONLY_ACTIVE_ARCH=NO | xcpretty
 - pod lib lint
