--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,9 @@ before_install:
 - gem install cocoapods # Since Travis is not always on latest version
 #- pod install --project-directory=Example
 script:
-- set -o pipefail && xcodebuild test -workspace Example/UICollectionViewGallery.xcworkspace -scheme UICollectionViewGallery-Example -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 6 Plus'
+- set -o pipefail && xcodebuild test -workspace Example/UICollectionViewGallery.xcworkspace -scheme UICollectionViewGallery-Example 
+-sdk iphonesimulator 
+-destination 'platform=iOS Simulator,name=iPhone 6 Plus'
 build
 test
  ONLY_ACTIVE_ARCH=NO | xcpretty
