--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,5 @@ before_install:
 - gem install cocoapods # Since Travis is not always on latest version
 #- pod install --project-directory=Example
 script:
-- set -o pipefail && xcodebuild test -workspace Example/UICollectionViewGallery.xcworkspace -scheme UICollectionViewGallery-Example -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 6 Plus' build test ONLY_ACTIVE_ARCH=NO | xcpretty
+- set -o pipefail && xcodebuild test -workspace Example/UICollectionViewGallery.xcworkspace -scheme UICollectionViewGallery-Example -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 6 Plus' ONLY_ACTIVE_ARCH=NO | xcpretty
 - pod lib lint
